Fix Setting menu icon alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,3 +100,8 @@ table.cards tbody label {
     margin-right: .25rem;
     min-width: 5rem;
 }
+
+/* Fix icon alignment inside nav item buttons */
+#navbar_content ul.navbar-nav li.nav-item a.btn svg {
+    margin: 0.1rem 0.25rem 0.1rem -0.25rem;
+}
